added big O calculator

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Welcome to Alec Shunnarah's Github Page!</h1>
 <br>
 
-<h3><a href="#">Big O Notation Calculator</a></h3>
+<h3><a href="./bigO/index.html">Big O Notation Calculator</a></h3>
