had to change the name of the scripts and stylesheets :)

--- a/BigO.html
+++ b/BigO.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="BigO.css">
 </head>
 
 <body>
@@ -37,4 +37,4 @@
     </div>
 </body>
 <script src="bigOCalc.js"></script>
-<script src="index.js"></script>
+<script src="BigO.js"></script>
