Added exponents to result

--- a/BigO.html
+++ b/BigO.html
@@ -33,6 +33,9 @@
 
     <div>
         <h2>Result:</h2>
+        <div id="resultShow">
+
+        </div>
         <h2 id="resultShow"></h2>
     </div>
 </body>
