support for foreach loops

--- a/BigO.html
+++ b/BigO.html
@@ -33,10 +33,10 @@
 
     <div>
         <h2>Result:</h2>
-        <div id="resultShow">
-
+        <div id="resultShow"></div>
+        <div id="codeAnalysis">
+            
         </div>
-        <h2 id="resultShow"></h2>
     </div>
 </body>
 <script src="bigOCalc.js"></script>
