Code analysis section

--- a/BigO.html
+++ b/BigO.html
@@ -32,11 +32,9 @@
 
 
     <div>
-        <h2>Result:</h2>
-        <div id="resultShow"></div>
-        <div id="codeAnalysis">
-            
-        </div>
+        <h2>Result:</h2><div id="resultShow"></div>
+
+        <div id="codeAnalysis"></div>
     </div>
 </body>
 <script src="bigOCalc.js"></script>
