highlights sections of code that make up complexity

--- a/BigO.html
+++ b/BigO.html
@@ -32,8 +32,8 @@
 
 
     <div>
-        <h2>Result:</h2><div id="resultShow"></div>
-
+        <h3>Result:</h3>
+        <div id="resultShow"></div>
         <div id="codeAnalysis"></div>
     </div>
 </body>
