Adding some updates to the home page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
     <div class="container">
-        <span class="header">Alec Shunnarah</span>
-        <span class="subheader">A man of many talents...</span>
+        <span class="header">ALEC SHUNNARAH</span>
+        <span class="subheader">I coded this website myself, WordPress is for dweebs ;)</span>
         <div class="row">
             <div class="home-page-link col-4">
                 <a href="./tech_home.html">
