updating to all the same picture cause the others are too big

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="home-page-link col-4">
                 <a href="./tech_home.html">
-                    <img class="home-page-img" src="./assets/images/DSC00366.jpg">
+                    <img class="home-page-img" src="./assets/images/DSC_1031.jpg">
                     <span class="link-label">Coding/Tech</span>
                 </a>
             </div>
@@ -25,7 +25,7 @@
             </div>
             <div class="home-page-link col-4">
                 <a href="./youtube_home.html">
-                    <img class="home-page-img" src="./assets/images/DSC00330.jpg">
+                    <img class="home-page-img" src="./assets/images/DSC_1031.jpg">
                     <span class="link-label">YouTube</span>
 
                 </a>
