new pictures and links with some work on the tech page

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
         <div class="row">
             <div class="home-page-link col-4">
                 <a href="./tech_home.html">
-                    <img class="home-page-img" src="./assets/images/DSC_1031.jpg">
+                    <img class="home-page-img" src="./assets/images/tech_pic.jpg">
                     <span class="link-label">Coding/Tech</span>
                 </a>
             </div>
             <div class="home-page-link col-4">
                 <a href="./music_home.html">
-                    <img class="home-page-img" src="./assets/images/DSC_1031.jpg">
+                    <img class="home-page-img" src="./assets/images/guitar_pic.jpg">
                     <span class="link-label">Music</span>
                 </a>
             </div>
             <div class="home-page-link col-4">
                 <a href="./youtube_home.html">
-                    <img class="home-page-img" src="./assets/images/DSC_1031.jpg">
-                    <span class="link-label">YouTube</span>
+                    <img class="home-page-img" src="./assets/images/adventure_pic.jpg">
+                    <span class="link-label">Adventure</span>
 
                 </a>
             </div>
