--- a/tech_home.html
+++ b/tech_home.html
@@ -19,14 +19,17 @@
                 <a target="_blank" href="http://kringle-app.s3-website.us-east-2.amazonaws.com/">Kringle</a>
             </h2>
 
-            <div class="col-sm-7">
+            <div class="col-md-7">
                 <img width="100%" src="./assets/images/kringle_concept.png">
             </div>
-            <div class="col-sm-5">
+            <div class="col-md-5">
                 <p>
                     Kringle is a website where users can create and share a collection of items that they like from
                     different e-commerce websites like Amazon, Etsy, etc. It's basically a gift registry for every-day
                     use!
+                </p>
+                <p>
+                    The application still has a lot of development and is still in its early stages!
                 </p>
                 <p>
                     The code for Kringle can be found on my GitHub <a href="https://github.com/shunnarski/Kringle">here.</a>
@@ -35,12 +38,17 @@
         </div>
 
         <div class="row portfolio-piece">
-            <h2>Big-O Notation Calculator</h2>
+            
+            <h2>
+                <a href="BigO.html">
+                    Big-O Notation Calculator
+                </a>
+            </h2>
 
-            <div class="col-sm-7">
+            <div class="col-md-7">
                 <img width="100%" src="./assets/images/tech_pic.jpg">
             </div>
-            <div class="col-sm-5">
+            <div class="col-md-5">
                 <p>
                     The Big-O Notation Calculator is a web tool that was intended for CS101 students to help them grasp the concept of Big-O Notation
                     when determining the complexity of their code.
@@ -55,7 +63,7 @@
                     how Big-O complexity of a set of code is determined. I had fun with it though!
                 </p>
                 <p>
-                    The code for Big-O Notation Calculator can be found <a href="BigO.html">here.</a>
+                    The code for Big-O Notation Calculator can be found <a href="https://github.com/shunnarski/bigO">here.</a>
                 </p>
             </div>
         </div>
