Added some videos from youtube

--- a/music_home.html
+++ b/music_home.html
@@ -6,7 +6,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 </head>
-
-<h1>
-    music home
-</h1>
+<body>
+    <a class="back-btn" href="index.html">Back</a>
+    <div class="container">
+        <div class="col-12 video-line">
+            <h2>Pink Floyd "Money" Solo</h2>
+            <iframe width="100%" height="500" src="https://www.youtube.com/embed/rXDYC0isRvU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+</body>
