--- a/tech_home.html
+++ b/tech_home.html
@@ -38,7 +38,6 @@
         </div>
 
         <div class="row portfolio-piece">
-            
             <h2>
                 <a href="BigO.html">
                     Big-O Notation Calculator
@@ -46,7 +45,7 @@
             </h2>
 
             <div class="col-md-7">
-                <img width="100%" src="./assets/images/tech_pic.jpg">
+                <iframe width="100%" height="70%" src="https://www.youtube.com/embed/4PdegmlQ-x0" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="col-md-5">
                 <p>
@@ -68,7 +67,7 @@
             </div>
         </div>
 
-        <div class="row portfolio-piece">
+        <!-- <div class="row portfolio-piece">
             <h2>Kringle</h2>
 
             <div class="col-sm-7">
@@ -79,6 +78,6 @@
                     fjdkal; vjdl;kj fklas;jfaskdl; jsal;j fal;jf  la; jld;sj  l;ajflk; jklf;dsa jkfl;j 
                 </p>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
